# Distributed_GPTQ

./: .gitignore  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  quickstart.py  requirements.txt  setup.py  test_installation.py
examples/: README.md  distributed_example.py  multi_gpu_example.py  single_gpu_example.py
src/distributed_gptq/: __init__.py  __version__.py  cli.py
src/distributed_gptq/core/: __init__.py  dequantizer.py  gptq.py  quantizer.py
src/distributed_gptq/distributed/: __init__.py  communication.py  coordinator.py  worker.py
src/distributed_gptq/kernels/: __init__.py  triton_kernels.py
src/distributed_gptq/models/: __init__.py  base_model.py  layers.py  llama.py  opt.py  transformers_model.py
src/distributed_gptq/utils/: __init__.py  benchmark.py  conversion.py  data_utils.py  gpu_utils.py  logging_utils.py  metrics.py
tests/: test_benchmark.py  test_distributed.py  test_quantization.py  test_utils.py
